--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -90,7 +90,7 @@ body {
     width: 100%;
     height: 3rem;
     color: black;
-    background-color: #e5a434;
+    background-color: rgb(218 159 60);
     border: 1px solid #0000002e;
     border-radius: 6px;
 }
@@ -112,4 +112,17 @@ body {
 
 #product-info h4{
     font-weight: 200;
+}
+
+.product-info-points {
+    text-align: start;
+}
+
+.product-info-points span {
+    border: 1px solid orange;
+    border-radius: 10px;
+    padding: 4px;
+    margin-right: 1rem;
+    font-weight: 100;
+ 
 }
