--- a/views/shared/includes/order-item.ejs
+++ b/views/shared/includes/order-item.ejs
@@ -1,7 +1,7 @@
 <article class="order-item">
     <header class="order-summary">
       <h2><span class="order-item-price">$<%= order.productData.totalPrice.toFixed(2) %></span> - <%= order.formattedDate %></h2>
-      <p><span class="badge"><%= order.status.toUpperCase() %></span></p>
+      <p><span class="badges"><%= order.status.toUpperCase() %></span></p>
     </header>
   
     <section class="order-details">
