--- a/views/customer/orders/all-orders.ejs
+++ b/views/customer/orders/all-orders.ejs
@@ -1,4 +1,5 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All your Orders'}) %>
+<link rel="stylesheet" href="/styles/orders.css">
 </head>
 
 <body>
